--- a/TAM2C/TAM2C.vcxproj.filters
+++ b/TAM2C/TAM2C.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="TAM2C.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Definitions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Include\Definitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
