Adding GDSU Ap buttons

--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -113,6 +113,10 @@
     </QtRcc>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GeneratedFiles\Debug\moc_ApPanels.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_JtanPanels.cpp" />
     <ClCompile Include="GeneratedFiles\qrc_ApPanels.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </PrecompiledHeader>
