--- a/GUI/GUI.vcxproj.filters
+++ b/GUI/GUI.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="Source\JtanPanels.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_ApPanels.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_JtanPanels.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="Resources\ApPanels.qrc">
