--- a/GUI/GUI.vcxproj.filters
+++ b/GUI/GUI.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="Generated Files\Debug">
       <UniqueIdentifier>{5e2ecddb-00f0-4be0-90e3-a5a35cb0efc1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Form">
+      <UniqueIdentifier>{df0f0497-44bb-452d-a535-8cdc4f03f483}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Form">
+      <UniqueIdentifier>{6857e3d9-3d95-4ee0-a1e2-813008f7ce92}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GeneratedFiles\qrc_ApPanels.cpp">
@@ -39,17 +45,20 @@
     <ClCompile Include="GeneratedFiles\qrc_JtanPanels.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\ApPanels.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\JtanPanels.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GeneratedFiles\Debug\moc_ApPanels.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
     <ClCompile Include="GeneratedFiles\Debug\moc_JtanPanels.cpp">
       <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\JtanPanels.cpp">
+      <Filter>Source Files\Form</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ApPanels.cpp">
+      <Filter>Source Files\Form</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -75,13 +84,19 @@
     <ClInclude Include="GeneratedFiles\ui_JtanPanels.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
+    <ClInclude Include="Include\Definitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <QtMoc Include="Include\ApPanels.h">
+    <QtMoc Include="Include\Button.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="Include\JtanPanels.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Form</Filter>
+    </QtMoc>
+    <QtMoc Include="Include\ApPanels.h">
+      <Filter>Header Files\Form</Filter>
     </QtMoc>
   </ItemGroup>
 </Project>
