--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -116,7 +116,9 @@
     <ClCompile Include="GeneratedFiles\Debug\moc_ApPanels.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_JtanPanels.cpp" />
+    <ClCompile Include="GeneratedFiles\Debug\moc_JtanPanels.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="GeneratedFiles\qrc_ApPanels.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </PrecompiledHeader>
@@ -136,7 +138,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="Resources\ApPanels.qrc" />
-    <QtRcc Include="Resources\JtanPanels.qrc" />
+    <QtRcc Include="Resources\JtanPanels.qrc">
+      <SubType>Designer</SubType>
+    </QtRcc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Form\ApPanels.ui">
