Moving AP camera with joystick

--- a/TAM2C/TAM2C.vcxproj
+++ b/TAM2C/TAM2C.vcxproj
@@ -163,10 +163,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Cabin.cpp" />
     <ClCompile Include="Source\Definitions.cpp" />
     <ClCompile Include="TAM2C.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\Cabin.h" />
     <ClInclude Include="Include\Definitions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
