--- a/TAM2C/TAM2C.vcxproj.filters
+++ b/TAM2C/TAM2C.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Cabin">
+      <UniqueIdentifier>{560680ef-a62c-41a1-b122-f84f335136d6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Cabin">
+      <UniqueIdentifier>{9576a6ee-ca47-4ebf-91fc-0b2f27c08c99}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TAM2C.cpp">
@@ -21,7 +27,13 @@
     <ClCompile Include="Source\Definitions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\JoysticksManager.cpp">
+      <Filter>Source Files\Cabin</Filter>
+    </ClCompile>
     <ClCompile Include="Source\Cabin.cpp">
+      <Filter>Source Files\Cabin</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -30,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Cabin.h">
+      <Filter>Header Files\Cabin</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\JoysticksManager.h">
+      <Filter>Header Files\Cabin</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
