--- a/TAM2C/TAM2C.vcxproj.filters
+++ b/TAM2C/TAM2C.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="Include\Jtan.h">
       <Filter>Header Files\Cabin</Filter>
     </ClInclude>
+    <ClInclude Include="Include\LocalResourceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
