Added GDSU class

--- a/TAM2C/TAM2C.vcxproj
+++ b/TAM2C/TAM2C.vcxproj
@@ -169,7 +169,7 @@
     <ClCompile Include="Source\Ap.cpp" />
     <ClCompile Include="Source\Cabin.cpp" />
     <ClCompile Include="Source\Definitions.cpp" />
-    <ClCompile Include="Source\IMember.cpp" />
+    <ClCompile Include="Source\GDSU.cpp" />
     <ClCompile Include="Source\JoysticksManager.cpp" />
     <ClCompile Include="Source\JTan.cpp" />
     <ClCompile Include="Source\LocalResourceManager.cpp" />
@@ -180,6 +180,7 @@
     <ClInclude Include="Include\Ap.h" />
     <ClInclude Include="Include\Cabin.h" />
     <ClInclude Include="Include\Definitions.h" />
+    <ClInclude Include="Include\GDSU.h" />
     <ClInclude Include="Include\IMember.h" />
     <ClInclude Include="Include\JoysticksManager.h" />
     <ClInclude Include="Include\Jtan.h" />
