Added member configuration to update ui

--- a/TAM2C/TAM2C.vcxproj.filters
+++ b/TAM2C/TAM2C.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="Include\Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Include\IMemberConfig.h">
+      <Filter>Header Files\Cabin</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
