--- a/TAM2C/TAM2C.vcxproj
+++ b/TAM2C/TAM2C.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Include\Config.h" />
     <ClInclude Include="Include\GDSU.h" />
     <ClInclude Include="Include\IMember.h" />
+    <ClInclude Include="Include\IMemberConfig.h" />
     <ClInclude Include="Include\JoysticksManager.h" />
     <ClInclude Include="Include\Jtan.h" />
     <ClInclude Include="Include\LocalResourceManager.h" />
