Added subscriber system for gui update

--- a/GUI/GUI.vcxproj.filters
+++ b/GUI/GUI.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="Include\Definitions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Include\ISubscriber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Include\JtanPanels.h">
